03-17 자료구조 정리

--- a/_posts/2023-03-16-자료구조-(스택,힙).md
+++ b/_posts/2023-03-16-자료구조-(스택,힙).md
@@ -34,4 +34,14 @@ date: 2023-03-16 11:49
     5. 정리
         1. 코드 영역/ 데이터 영역은 메모리 사용량에 변동이 없고 앱이 종료될 때 메모리에서 해제
         2. 스택/ 힙 영역은 가변적이다.
-### 스택
+        3. 메모리 주소란, 메모리 위치에 대한 식별자이며 데이터를 저장하고 나중에 가져올 때 사용하는 장소이다.
+        4. 메모리 주소는 낮은 주소부터 높은 주소로 구별한다.
+### 스택(Stack)
+스택이란, **선입후출** 방식으로 먼저 들어온 데이터가 나중에 나가는 형식의 자료 구조이다.
+- 스택은 입구, 출구가 동일한 형태로 되어있으며, 쉽게 생각하면 **박스를 쌓는다고 생각하면 된다.**
+- 코드 구현 시 리스트를 사용하기에 적합
+    -  오른쪽에서 데이터를 삽입(append), 삭제(pop)을 지원하기 때문이다.
+### 큐 (Queue)
+
+큐는  **선입선출** 방식으로 먼저 들어온 데이터가 먼저 나가는 형태의 자료 구조이다.
+- 입구 및 출구가 모두 뚫려있는 **터널과 같은 형태**로 생각하면 된다.
