스택, 큐 업로드

--- a/_posts/2023-03-16-자료구조-(스택,힙).md
+++ b/_posts/2023-03-16-자료구조-(스택,힙).md
@@ -7,41 +7,35 @@ date: 2023-03-16 11:49
 ---
 ## 스택(Stack)과 큐(Queue)
 
-### intro
+### Intro
 > CS와 코딩테스트를 준비하던 중 스택과 큐 자료구조에 대해서 계속 노출되어 반드시 정리가 필요할 것으로 생각되어 정리해보려 한다.
 
 
-### 메모리 구조
-> 스택과 큐를 알기 위해서는 메모리 구조부터 알아야 한다.
+### 자료구조
+> 자료구조란, 데이터를 표현하고 관리하고 처리하기 위한 구조를 의미한다.
 
-#### 메모리 영역에는 4가지가 있다. (Code, Data, Stack, Heap)
-    1. 코드 영역
-        1. 소스코드들이 저장되는 영역
-        2. 코드영역은 실행 파일을 구성하는 명령어들이 올라가는 메모리 영역으로 함수, 제어문, 상수 등이 여기에 지정된다.****
-        3. 즉, 텍스트 영역이다.
-    2. 데이터 영역
-        1. 전역변수, 정적(static) 변수가 저장되는 공간
-        2. 데이터 영역은 프로그램 실행과 함께 같이 할당되며, 프로그램 종료 시 소멸된다.
-    3. 힙 영역
-        1. 프로그래머(사용자가) 직접 관리할 수 있다. (즉, 메모리 공간을 동적으로 할당되고, 해제되는 영역이다.)
-            1. 힙 영역에 할당하는 것을 동적할당이라 한다.
-        2. 자바에서 가비지 컬렉터가 자동으로 해제해준다.
-        3. 낮은 주소에서 높은 주소로 할당된다.
-    4. 스택 영역
-        1. 프로그램이 자동으로 사용하는 임시 메모리 영역
-            1. 함수 호출과 함꼐 할당되고 호출이 완료되면 소멸한다.
-        2. 호출 시 생성되는 지역변수/매개변수가 저장되는 영역
-    5. 정리
-        1. 코드 영역/ 데이터 영역은 메모리 사용량에 변동이 없고 앱이 종료될 때 메모리에서 해제
-        2. 스택/ 힙 영역은 가변적이다.
-        3. 메모리 주소란, 메모리 위치에 대한 식별자이며 데이터를 저장하고 나중에 가져올 때 사용하는 장소이다.
-        4. 메모리 주소는 낮은 주소부터 높은 주소로 구별한다.
 ### 스택(Stack)
-스택이란, **선입후출** 방식으로 먼저 들어온 데이터가 나중에 나가는 형식의 자료 구조이다.
+
+> 스택이란, 쌓다의 의미로 데이터를 차곡차곡 쌓아 둔 형태를 가진 자료구조이다.
+- **선입후출** 방식(=후입선출) 으로 먼저 들어온 데이터가 나중에 나가는 형식의 자료 구조이다.
+- 가장 최근에 들어온 자료를 top이라 한다. 데이터를 꺼낼 때 가장 위쪽(top) 데이터부터 꺼낼 수 있는 구조.
+    - 스택에 데이터를 삽입할 때 : POP
+    - 스택에 데이터를 삭제할 때 : PUSH
 - 스택은 입구, 출구가 동일한 형태로 되어있으며, 쉽게 생각하면 **박스를 쌓는다고 생각하면 된다.**
-- 코드 구현 시 리스트를 사용하기에 적합
-    -  오른쪽에서 데이터를 삽입(append), 삭제(pop)을 지원하기 때문이다.
+- **스택 오버플로우(overflow)/스택 언더플로우(underflow)**
+    - 스택이 꽉 차있을 때 자료를 넣으려고 하면 스택 오버플로우
+    - 스택이 비어있을 때 자료를 꺼내려고 시도하면 스택 언더플로우
+- **스택 활용 예시**
+    - 웹 브라우저 방문기록(뒤로가기) : 가장 나중에 열린 페이지부터 보여준다.
+    - 실행 취소(undo) : 가장 나중에 입력된 문자부터 출력한다.
+
 ### 큐 (Queue)
 
-큐는  **선입선출** 방식으로 먼저 들어온 데이터가 먼저 나가는 형태의 자료 구조이다.
+> 큐는 대기 줄과 같이, 데이터가 먼저 들어온 순서대로 먼저 나가는 형태로 구성된 자료구조이다.
+
+- **선입선출** 방식으로 먼저 들어온 데이터가 먼저 출력되는 자료구조이다.
 - 입구 및 출구가 모두 뚫려있는 **터널과 같은 형태**로 생각하면 된다.
+- **큐 활용예시**
+    - 은행창구 번호표 대기 : 먼저 번호표를 받은 사람이 먼저 업무를 본다.
+    - 프린트 출력 : 가장 먼저 대기열에 오른 프린트가 먼저 출력된다. 
+    - 너비 우선 탐색 알고리즘(BFS)
