개념 정리 완료!

--- a/_posts/2023-03-19-객체지향.md
+++ b/_posts/2023-03-19-객체지향.md
@@ -32,6 +32,14 @@ date: 2023-03-19 11:49
 - 오버라이딩과 오버로딩을 예로 들 수 있다.(별도 정리할 예정)
 
 #### 3. 상속
-#### 4. 추상화
+- 상속이란, 부모클래스의 속성, 메소드를 자식클래스가 이어받는 것을 말한다.
+- 자식클래스는 `extends` 키워드를 통해 상속받은 부모클래스의 모든 멤버변수 및 메소드를 승계하여 자신의 것처럼 쓸 수 있다.
+    - 이 때, 부모클래스에서 private로 선언했다면 사용할 수 없다.
+- 기능의 일부분을 변경해야 할 경우 상속받은 자식클래스에서 해당 기능만 다시 수정하여 사용할 수 있게 한다.
+- 동일한 코드에 대해 유지보수 및 재사용에 용이하다.
+- 자바의 경우 단일상속만 지원하는데, 이 때 다중상속의 장점을 구현하기 위해 '인터페이스(interface)'를 사용한다.
 
+#### 4. 추상화
+- 추상화란, 공통된 특징을 묶어 하나의 클래스로 정의하는 것을 말한다.
+    - 다른 차종이지만 동일하게 바퀴, 문, 핸들, 창문 등의 요소를 갖고 있다. 이렇게 서로 다른 객체(차종)이지만 공통된 특징과 기능을 지니고 있다는 것을 알 수 있고 이러한 공통점을 모아 하나의 '자동차'라는 범주, 즉 '클래스'로 묶을 수 있다.
 
