--- a/_posts/2023-03-16-자료구조-(스택,힙) copy.md
+++ b/_posts/2023-03-16-자료구조-(스택,힙) copy.md
@@ -4,9 +4,9 @@ title: 자료구조(스택, 큐) 정리
 tags: CS
 date: 2023-03-16 11:49
 toc:  true
+toc_label: "자료구조(스택, 큐)"
 
 ---
-## 스택(Stack)과 큐(Queue)
 
 ### Intro
 > CS와 코딩테스트를 준비하던 중 스택과 큐 자료구조에 대해서 계속 노출되어 반드시 정리가 필요할 것으로 생각되어 정리해보려 한다.
