--- a/_posts/2023-03-13-첫-게시물.md
+++ b/_posts/2023-03-13-첫-게시물.md
@@ -5,8 +5,9 @@ date: 2023-03-09 15:30 +0800
 last_modified_at: 2023-03-13 15:30 +0800
 tags: [jekyll theme, jekyll, tutorial]
 toc:  true
+toc_label: "첫 포스팅 과정"
+
 ---
-## 첫 포스팅 과정
 ### intro
 > 국비과정을 수료한 후 프로젝트 하는 중에 배웠던 개념들과 과정들을 기록하기 위해 기술블로그를 만들게 되었다.<br>
 이제 취업을 위해 기본 CS(Computer Science) 지식을 공부한 것을 기록하고 알고리즘도 꾸준히 문제를 푸는 과정들도 기록 할 예정이다.
