--- a/_posts/2023-03-19-객체지향.md
+++ b/_posts/2023-03-19-객체지향.md
@@ -4,9 +4,9 @@ title: 객체지향이란?
 tags: CS
 date: 2023-03-19 11:49
 toc:  true
+toc_label: "객체지향 프로그래밍"
 
 ---
-## 객체지향 프로그래밍
 
 ### Intro
 > 상속을 복습하던 중, 객체지향과 객체지향의 특징을 한 번에 정리하려 한다.
