--- a/_posts/2023-03-13-첫-게시물.md
+++ b/_posts/2023-03-13-첫-게시물.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: [Blog]첫 포스팅 과정(mac환경 블로그만들기)
+title: 첫 포스팅 과정(mac환경 블로그만들기)
 date: 2023-03-09 15:30 +0800
 last_modified_at: 2023-03-13 15:30 +0800
 tags: [jekyll theme, jekyll, tutorial]
