--- a/_posts/2023-06-05-스프링 부트 환경설정.md
+++ b/_posts/2023-06-05-스프링 부트 환경설정.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "[SpringBoot]스프링 부트 환경설정"
-tags: Springboot
+tags: [Springboot]
 date: 2023-06-05 11:49
 categories : [SpringBoot]
 toc:  true
