--- a/_posts/2023-06-14-ORM & JPA.md
+++ b/_posts/2023-06-14-ORM & JPA.md
@@ -16,7 +16,7 @@ toc_label: "ORM & JPA"
 
 
 - 객체와 RDB를 매핑할 때 불일치가 발생할 수 있는데, ORM을 통해 객체 간의 관계를 바탕으로 SQL문을 자동으로 생성하여 불일치를 해결한다.
-- <span style="color:blue">장점</span>
+- <span style="color:#1E90FF">장점</span>
   - SQL Squery를 직접 작성하지 않아도, JPArepository의 메서드를 활용하여 객체.findAll(), 객체.findById() 등의 메서드를 사용하여 데이터 조회를 할 수 있다.
     - ex) SELECT * FROM member; => member.findAll();
   - 객체 지향적인 코드 작성이 가능하다 !
@@ -24,7 +24,7 @@ toc_label: "ORM & JPA"
   - 가독성도 높일 수 있음.
   - DBMS 종속성이 줄어든다.
     - 자바에서 equals, hashcode의 오버라이드 같은 자바 기능을 사용할 수 있음.
-- <span style="color:blue">단점</span>
+- <span style="color:#1E90FF">단점</span>
   - 완벽한 ORM으로만 서비스 구현이 어렵다.
     - 사용하기는 편리하지만, 설계를 매우 신중하게 해야 한다.(순환참조가 발생할 수 있기 때문.)
     - 프로젝트 규모가 커질 수록 난이도가 어려워진다.
@@ -34,15 +34,15 @@ toc_label: "ORM & JPA"
 > JPA(Java Persistent API)란 자바 어플리케이션에서 관계형 데이터베이스를 사용하는 방식을 정의한 인터페이스로, 자바 ORM 기술에 대한 API 표준 명세이다.
 
 - 자바에 있는 데이터를 영구히 기록할 수 있도록 환경을 제공하는 API이다. (여기서 중요한 점은 <span style="color:red">JPA는 인터페이스인 것이다. 라이브러리가 아님!!</span>)
-- JPA를 구현한 구현체가 <span style="color:blue">Hibernate이다.</span>
+- JPA를 구현한 구현체가 <span style="color:#1E90FF">Hibernate이다.</span>
   - Hibernate는 ORM 프레임워크 중 가장 많이 사용되며 JPA의 인터페이스의 실제 구현부를 담당한다.
 - Hibernate를 통해 JDBC API를 사용하여 DB와 통신하고 SQL을 호출하고 반환한다.
-  - <span style="color:blue">Hibernate가 지원하는 메서드 내부에서 JDBC API가 동작하고 있고, 단지 개발자가 직접 SQL을 작성하지 않는 것임.</span>
-- <span style="color:blue">장점</span>
+  - <span style="color:#1E90FF">Hibernate가 지원하는 메서드 내부에서 JDBC API가 동작하고 있고, 단지 개발자가 직접 SQL을 작성하지 않는 것임.</span>
+- <span style="color:#1E90FF">장점</span>
   - 반복적인 CRUE 작업을 생략하게 해준다.
   - SQL이 아닌 객체 중심으로 개발할 수 있다는 것이다. 객체 중심으로 개발하게 되면 생산성 향상과 유지보수도 수월해지는 장점도 있다.
   - JPA를 통해 상속, 연관관계, 컴포지션 등 OOP의 관점에서 모델링을 할 수 있게 해준다.
-- <span style="color:blue">단점</span>
+- <span style="color:#1E90FF">단점</span>
   - 학습이 어렵고, 학습 비용이 높음.
   - 잘못 사용하게 되면 직접 Query 작성하는 것보다 성능이 떨어질 수 있음.
   
