--- a/_posts/2023-06-16-어노테이션과 리플렉션.md
+++ b/_posts/2023-06-16-어노테이션과 리플렉션.md
@@ -45,7 +45,7 @@ toc_label: "어노테이션과 리플렉션"
 - 각각 Get요청, Post요청을 보내기 위해 사용되는 어노테이션임.
 
 ## 3. 리플렉션(Reflection)이란?
-> 사전적 의미로는 투영을 뜻한다. 구체적인 클래스 타입을 알지 못하더라도 그 클래스의 메서드, 타입, 변수들에 접근할 수 있도록 해주는 자바 API를 의미하며 <span style="color:blue">컴파일 시간이 아닌 실행시간(ex.요청 들어왔을 때)에 동적으로 특정 클래스의 정보를 추출할 수 있는 프로그래밍 기법이라 할 수 있다.<span>
+> 사전적 의미로는 투영을 뜻한다. 구체적인 클래스 타입을 알지 못하더라도 그 클래스의 메서드, 타입, 변수들에 접근할 수 있도록 해주는 자바 API를 의미하며 <span style="color:#1E90FF">컴파일 시간이 아닌 실행시간(ex.요청 들어왔을 때)에 동적으로 특정 클래스의 정보를 추출할 수 있는 프로그래밍 기법이라 할 수 있다.<span>
 
 - 요청(ex. http://localhost:8080/context-path/xxxx)이 들어오게 되면 리플렉션을 통해 context-path뒤에 붙은 주소를 기반으로 컨트롤러에서 함수를 찾아낸다.
 - 즉, 주소를 작성해둘 때는 어떤 클래스를 사용할 지 모르지만 런타임 시점에 가져와 실행해야 하는 경우 리플렉션이 필요하다.
