--- a/_posts/2023-06-14-ORM & JPA.md
+++ b/_posts/2023-06-14-ORM & JPA.md
@@ -12,7 +12,7 @@ toc_label: "ORM & JPA"
 > 부트를 접하면서 JPA가 가장 신기했고 정말 이해만 한다면 편리한 기술이겠구나 생각이 들었다. 그렇기에 확실하게 JPA의 개념을 정리하고자 한다. 
 
 ## ORM(Object-Relational-Mapping)이란?
-> DB의 특정 테이블이 자바의 객체로 매핑되어 SQL문을 일일이 작성하지 않고 객체로 구현할 수 있도록 하는 기술이라고 할 수 있다. 여기서 <span style="color:red">포인트는 객체와 관계형 데이터베이스의 매핑이다.</span>
+> DB의 특정 테이블이 자바의 객체로 매핑되어 SQL문을 일일이 작성하지 않고 객체로 구현할 수 있도록 하는 기술이라고 할 수 있다. 여기서 <span style="color:#FF6347">포인트는 객체와 관계형 데이터베이스의 매핑이다.</span>
 
 
 - 객체와 RDB를 매핑할 때 불일치가 발생할 수 있는데, ORM을 통해 객체 간의 관계를 바탕으로 SQL문을 자동으로 생성하여 불일치를 해결한다.
@@ -33,7 +33,7 @@ toc_label: "ORM & JPA"
 ## JPA(Java Persistent API)란?
 > JPA(Java Persistent API)란 자바 어플리케이션에서 관계형 데이터베이스를 사용하는 방식을 정의한 인터페이스로, 자바 ORM 기술에 대한 API 표준 명세이다.
 
-- 자바에 있는 데이터를 영구히 기록할 수 있도록 환경을 제공하는 API이다. (여기서 중요한 점은 <span style="color:red">JPA는 인터페이스인 것이다. 라이브러리가 아님!!</span>)
+- 자바에 있는 데이터를 영구히 기록할 수 있도록 환경을 제공하는 API이다. (여기서 중요한 점은 <span style="color:#FF6347">JPA는 인터페이스인 것이다. 라이브러리가 아님!!</span>)
 - JPA를 구현한 구현체가 <span style="color:#1E90FF">Hibernate이다.</span>
   - Hibernate는 ORM 프레임워크 중 가장 많이 사용되며 JPA의 인터페이스의 실제 구현부를 담당한다.
 - Hibernate를 통해 JDBC API를 사용하여 DB와 통신하고 SQL을 호출하고 반환한다.
