--- a/_posts/2023-06-16-어노테이션과 리플렉션.md
+++ b/_posts/2023-06-16-어노테이션과 리플렉션.md
@@ -24,7 +24,7 @@ toc_label: "어노테이션과 리플렉션"
 
 ### @Bean
 - @Bean은 개발자가 외부 라이브러리와 같은 제어 불가능한 것들을 Bean으로 만들 때 사용하는 어노테이션임.
-- 수동으로 스프링 컨테이너에 빈을 등록하는 방법이며,  <span style="color:red">@Configuration과 반드시 같이 사용해야만 한다.</span>
+- 수동으로 스프링 컨테이너에 빈을 등록하는 방법이며,  <span style="color:#FF6347">@Configuration과 반드시 같이 사용해야만 한다.</span>
   - 이유에 대해서는 Component, Configuration, Bean을 총 정리하여 포스팅 할 예정!
 
 ### @ModelAttribute
