--- a/_posts/2023-06-19-영속성 컨텍스트란?(feat. 영속상태, 엔티티매니저).md
+++ b/_posts/2023-06-19-영속성 컨텍스트란?(feat. 영속상태, 엔티티매니저).md
@@ -10,13 +10,14 @@ toc_label: "영속성 컨텍스트란?(feat. 영속상태, 엔티티매니저)"
 
 ## Intro
 > JPA를 공부하면서 영속성 컨텍스트라는 영역에 대해 알게 되었다. 엔티티 매니저, 엔티티 매니저 팩토리, 영속화 등 생소하고 어려운 단어와 내용들이기에 정리하고자 한다.
+
 ## 엔티티
 > 영속성 컨텍스트 설명에 앞서, 엔티티라고 하는 것은 DB테이블에 보관할 대상으로 @Entity가 선언된 객체를 의미함. 예를 들어, 회원가입 시 유저 정보를 DB에 저장해야 하는데 이 때 User라는 객체를 저장할 것인데 이 때 User를 엔티티라 한다.
 
 ## 영속성 컨텍스트란
->  영속성 컨텍스트란, 엔티티를 영구적으로 보관하는 환경을 의미한다. DB에 엔티티를 저장하는 것이 아니라, <span style ="color:red">영속성 컨텍스트를 통해 엔티티를 영속화한다는 개념이다. <span style ="color:#1E90FF">(영속화란 영속성 컨텍스트에 관리되는 상태로 만드는 것을 의미한다.)</span>
+>  영속성 컨텍스트란, 엔티티를 영구적으로 보관하는 환경을 의미한다. DB에 엔티티를 저장하는 것이 아니라, <span style ="color:#FF6347">영속성 컨텍스트를 통해 엔티티를 영속화한다는 개념이다. <span style ="color:#1E90FF">(영속화란 영속성 컨텍스트에 관리되는 상태로 만드는 것을 의미한다.)</span>
  
-## 엔티티 매니저(EntityManager) & 엔티티 매니저 팩토리(EntityManager Factory)
+## 엔티티 매니저 & 엔티티 매니저 팩토리
 > <span style ="color:#1E90FF">엔티티 매니저(EntityManager)</span>는 요청이 들어올 때 엔티티 매니저가 DB 커넥션 풀을 얻어서 영속 컨텍스트에 접근하여 DB 작업을 처리한다. <span style ="color:#1E90FF">엔티티 매니저 팩토리(EntityManager Factory)</span>는 엔티티 매니저를 생성하는 역할을 한다.
 
 - 엔티티 매니저는 엔티티를 관리하고, 필요에 따라 DB의 데이터 조회, 수정, 삭제 등을 수행한다.
@@ -30,7 +31,7 @@ toc_label: "영속성 컨텍스트란?(feat. 영속상태, 엔티티매니저)"
 - 여기서 영속 상태가 됐다하더라도 DB에 저장되는 것이 아니다.
 - 트랜잭션 commit을 하는 시점에 영속화 된 객체가 DB로 쿼리가 날라가게 되는 것이다.
   - 여기서, 주의할 점으로는 persist() 메서드는 트랜잭션 범위 내에서 실행해야 한다. 실행시점에 영속 컨텍스트에 엔티티를 저장하고 commit() 하는 시점에 insert쿼리가 실행되기에 범위 내에서 실행되지 않는다면 실제로 DB에 반영되지 않는다.
-- 코드()
+- 코드
     ```java
     // 객체 생성
     User user = new User();
@@ -61,7 +62,8 @@ toc_label: "영속성 컨텍스트란?(feat. 영속상태, 엔티티매니저)"
 - <span style ="color:#1E90FF">영속화란</span> DB에 영구적으로 저장된다는 뜻이 아니라, 영속성 컨텍스트에 저장되는 상태를 의미한다!
 - <span style ="color:#1E90FF">영속성 컨텍스트란</span> 엔티티를 영구적으로 보관하는 환경임.
 - 엔티티 매니저를 통해서 영속화를 진행하고, 준영속 상태로 변환하거나 삭제할 수 있다.
-- 이후 <span style ="color:red">포스팅에서는 왜 영속성 컨텍스트에 저장하고 사용하는 지에 대해서 정리한다!(Dirty Checking, 1차 캐시 등)<span>
+- 이후 <span style ="color:#FF6347">포스팅에서는 왜 영속성 컨텍스트에 저장하고 사용하는 지에 대해서 정리한다!(Dirty Checking, 1차 캐시 등)<span>
+  
 ## 참고 사이트
 [엔티티 매니저, 엔티티 참고 게시물](https://ttl-blog.tistory.com/108)<br>
 [영속성 컨텍스트 참고 게시물](https://tall-developer.tistory.com/7)<br>
