파일명 변경

--- a/_posts/2023-07-26-(이코테)-구현.md
+++ b/_posts/2023-07-26-(이코테)-구현.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: "[이코테]구현"
-tags: [이코테]
+title: "[이코테] 구현"
+tags: [Algorithm]
 date: 2023-07-26 11:49
 # last_modified_at: 2023-07-07 14:29
 
