--- a/_posts/2023-10-19-MySQL 설정.md
+++ b/_posts/2023-10-19-MySQL 설정.md
@@ -35,9 +35,15 @@ toc_label: "MySQL"
 
 나는 비밀번호를 암호화하지 않아서 mysql이 접속되지 않았고 이에 대해 해결방법을 작성한다.
 1. MySQL 서버를 멈춘다.
-   - ```mysql.server stop```
+```plaintext
+mysql.server stop
+```
+
 2. MySQL 서버를 비밀번호를 입력하지 않아도 접속하는 설정.
-   - ```mysql.server start --skip-grant-tables```
+```plaintext
+mysql.server start --skip-grant-tables
+```
+
 3. root 유저로 접속
    - ```mysql -u root```
 4. DB 선택
