--- a/_posts/2023-10-19-MySQL 설정.md
+++ b/_posts/2023-10-19-MySQL 설정.md
@@ -21,14 +21,29 @@ toc_label: "MySQL"
 초기에 이 방법으로 설정하면 문제가 없을 것이라 생각이 든다.
 
 1. MySQL 접속
-   - ```mysql -u root```
+```plaintext
+mysql -u root
+```
+
 2. DB를 선택.
-   - ```use mysql;```
+```plaintext
+use mysql;
+```
+
 3. 유저와 패스워드 조회
-   - ```select host,user,authentication_string from user;``` 
-   - 만약, 유저가 없다면 ```CREATE USER 'root'@'localhost' IDENTIFIED WITH caching_sha2_password BY '1234';```
+```plaintext
+select host,user,authentication_string from user;
+``` 
+
+만약, 유저가 없다면
+```plaintext
+CREATE USER 'root'@'localhost' IDENTIFIED WITH caching_sha2_password BY '1234';
+```
+
 4. 패스워드 설정
-   - ```ALTER USER 'root'@'localhost' IDENTIFIED WITH caching_sha2_password BY '1234';```
+```plaintext
+ALTER USER 'root'@'localhost' IDENTIFIED WITH caching_sha2_password BY '1234';
+```
 
 
 ## 비밀번호 초기화 및 재설정
@@ -45,15 +60,21 @@ mysql.server start --skip-grant-tables
 ```
 
 3. root 유저로 접속
-   - ```mysql -u root```
+```plaintext
+mysql -u root
+```
 4. DB 선택
-   - `use mysql;`
+```plaintext
+use mysql;
+```
 5. 기존 비밀번호를 Null로 변경
-   - `UPDATE user SET authentication_string=null WHERE User='root';`
+```plaintext
+UPDATE user SET authentication_string=null WHERE User='root';
+```
 6. 변경 권한 설정(반드시 해야 함.)
-   - `FLUSH PRIVILEGES;`
+   - ```plaintext FLUSH PRIVILEGES;```
 7. Mysql 재접속
-   - `exit`
+   - `plaintext exit`
    - `mysql -u root`
 8. 비밀번호 변경
    - `ALTER USER 'root'@'localhost' IDENTIFIED WITH caching_sha2_password BY '1234';`
